--- a/pipeline-resources.yaml
+++ b/pipeline-resources.yaml
@@ -8,7 +8,7 @@ spec:
     - name: revision
       value: master
     - name: url
-      value: https://gitlab.com/nmeisenzahl/tekton-demo
+      value: https://github.com/SrijalKarmacharya/node-chat.git
 ---
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
@@ -18,4 +18,4 @@ spec:
   type: image
   params:
     - name: url
-      value: registry.gitlab.com/nmeisenzahl/tekton-demo/demo:latest
+      value: srijaldocker/tekton:latest
